version/0.20/_sources/api/solver/_autosummary/settings/mg_controls.rst.txt
:orphan:

.. _mg_controls:

mg_controls
===========

.. autoclass:: ansys.fluent.core.solver.settings_241.mg_controls.mg_controls
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`mg_controls_child <mg_controls_child>`


.. rubric:: Included in:

==============================   ==========================

Parent                                              Summary

==============================   ==========================
:ref:`multi_grid <multi_grid>`       Enter multi-grid menu.

==============================   ==========================

