version/0.28/_sources/api/solver/_autosummary/settings/mg_controls.rst.txt
:orphan:

.. _mg_controls:

mg_controls
===========

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.mg_controls
    :show-inheritance:

.. rubric:: Methods

========================================   =========================================

Method                                                                       Summary

========================================   =========================================
:ref:`create <create_1>`                                 Create an instance of this.

:ref:`delete <delete_1>`                                    Delete selected objects.

:ref:`rename <rename>`                                            Rename the object.

:ref:`list <list>`                                    List the names of the objects.

:ref:`list_properties <list_properties>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                        Create a copy of the object.

========================================   =========================================

.. rubric:: Named object type

:ref:`mg_controls_child <mg_controls_child>`


.. rubric:: Included in:

==================================================================   ===============================================================

Parent                                                                                                                       Summary

==================================================================   ===============================================================
:ref:`zonal_pbns_solution_controls <zonal_pbns_solution_controls>`       Set mom and pressure relaxation factors for coupled solver.

==================================================================   ===============================================================

